fixed uneven forms with side menu

--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -852,7 +852,7 @@ svg{
   height: 100%;
   position: fixed;
   left: 0;
-  z-index: 10;
+  z-index: 5;
   transition: left 0.3s ease-in-out;
   overflow-y: auto;
   background: var(--darkGray2);
@@ -945,6 +945,8 @@ svg{
 
 .rotate180{transform: rotate(180deg);}
 
+.content-with-side-header .formWindow{left: 190px;}
+
 @media screen and (max-width: 1200px){
   .side-header-wrapper{width: 70%; height: 100vh; left: calc(-1 * (70vw));}
   .side-header-mobile-burger.active + .side-header-wrapper{left: 0;}
@@ -954,8 +956,9 @@ svg{
   .side-header-title{padding: 50px 15px; font-size: 40px;}
   .side-header-submenu-link{font-size: 35px !important;}
   .content-with-side-header{margin-left: 0; padding-top: calc(var(--sideHeaderBurgerHeight) + 15px);}
-  .side-header-mobile-burger{display: block; z-index: 11;}
+  .side-header-mobile-burger{display: block; z-index: 6;}
   .page-with-side-menu{display: flex; overflow-x: hidden;}
+  .content-with-side-header .formWindow{left: 0;}
 }
 /* Mobile friendly stuff */
 @media screen and (max-width: 1200px) {
@@ -966,6 +969,8 @@ svg{
   .font30px{font-size: 50px !important;}
   .font40px{font-size: 70px !important;}
   .font50px{font-size: 80px !important;}
+
+  .blankInput{font-size: 30px;}
 
   .popup{width: 500px !important; left: auto !important; right: auto !important; margin: 0 auto;}
   .arrow-left{display: none;}
